--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:latest AS build
 WORKDIR /app
 COPY . /app/
-RUN python -m venv /app
-RUN bin/pip install -r requirements.txt
+RUN pip install -r requirements.txt
 EXPOSE 8080
 CMD ["python", "Server.py"]
